--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
   "name": "hello/yii2-dlj",
   "description": "Hello, Composer!",
   "type": "yii2-extension",
+  "keywords": [
+    "yii2"
+  ],
   "license": "BSD-4-Clause",
   "authors": [
     {
@@ -16,7 +19,7 @@
   },
   "autoload": {
     "psr-4": {
-      "hello\\dlj\\": "src"
+      "hello\\dlj\\": "yii2-dlj/src"
     }
   }
 }
