--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "2195115234@qq.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
