--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dljfirst/dlj",
+    "name": "dljfirst/yii2-dlj",
     "description": "composer test",
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
