--- a/yii2-dlj/src/composer.json
+++ b/yii2-dlj/src/composer.json
@@ -2,6 +2,7 @@
     "name": "dljfirst/yii2-dlj",
     "description": "composer test",
     "type": "yii2-extension",
+    "keywords": ["yii2"],
     "license": "BSD-4-Clause",
     "authors": [
         {
@@ -10,7 +11,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "yiisoft/yii2": "~2.0.0"
+    },
     "autoload": {
         "psr-4": {
             "dljfirst\\dlj\\": "src"
